[Qt][Win] Fix UString related build problem in Source/WebCore/bridge/qt/qt_instance.cpp https://bugs.webkit.org/show_bug.cgi?id=88310

Reviewed by Simon Hausmann.

* bridge/qt/qt_instance.cpp:
(JSC::Bindings::QtInstance::getPropertyNames):

Canonical link: https://commits.webkit.org/106605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119969 268f45cc-cd09-0410-ab3c-d52691b4dbfc